--- a/images/test/Ronda Tourism Website/style-guide.html
+++ b/images/test/Ronda Tourism Website/style-guide.html
@@ -156,6 +156,57 @@
       
       </div>
   
+    <section id = "homepage-banner">
+        <div class = "container">
+            <div class = "box">
+                <div class = "image">
+                    <img id = "desktop-banner" src="images/homepage-banner.jpg">
+                    <img id = "mobile-banner" src="images/homepage-banner-mobile.jpg">
+                </div>
+            </div>
+        </div>
+    </section>
+
+<div class="feature-container-large">
+ 
+  <div class="feature-item-large"><img src="./images/ronda/ronda_18.jpg"><div class="centered-text-header">Highlights</div><div class="centered-text-large">Best Viewpoints in Ronda<hr></div>
+<div class="read-more"><a href=#>Read More</a></div></div>
+  </div>
+
+      <section id = "homepage-banner">
+        <div class="container">
+          <section id="desktop-banner">
+            <article class="desktop-banner">
+                <img src="./images/homepage-banner.jpg" />
+            </article>
+  
+        </section>
+        </div>
+      </section>
+
+            <section id = "homepage-banner">
+        <div class="container">
+          <section id="mobile-banner">
+            <article class="mobile-banner">
+                <img src="./images/homepage-banner-mobile-3.jpg" />
+            </article>
+  
+        </section>
+        </div>
+      </section>
+
+
+  <div class="homepage-parallax-banner-1">
+    <div class="centered-text-header">
+      Highlights
+    </div>
+    <div class="centered-text-large">Best Viewpoints in Ronda<hr>
+    </div>
+<div class="read-more">
+  <a href=#>Read More</a>
+</div>
+</div>
+
       
     <div id = "footer">
       <div id="footer-text">
