--- a/images/test/Ronda Tourism Website/1-day-itinerary.html
+++ b/images/test/Ronda Tourism Website/1-day-itinerary.html
@@ -79,7 +79,11 @@
   </ul>
 </nav>	
 
-  
+  <style>
+  #menu .sub-menu:not(.open) {
+  display: none;
+}
+</style>
 
 
         <div class="banner-image">
