--- a/images/test/Ronda Tourism Website/andalucia-gallery.html
+++ b/images/test/Ronda Tourism Website/andalucia-gallery.html
@@ -95,6 +95,10 @@
   </nav>	        
   </div>
 
+  <style>
+ 
+  </style>
+
   <div class="gallery-menu">
     <a href="ronda-gallery.html">Ronda</a>
     <a href="serrania-gallery.html">Serrania</a>
