--- a/about.html
+++ b/about.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-82051316-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'UA-82051316-1');
-</script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>About - David Soanes Photography</title>
-    <meta name="description" content="Photographer based in Barcelona and specialising in stock, product and travel photography. Please contact for enquiries." />
-    <script src="https://use.fontawesome.com/af14fb55aa.js"></script>
-    <script src="js/javascript.js"></script>
-    <link rel="icon" type="image/png" href="images/favicon.ico">
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-82051316-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-82051316-1');
+  </script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>About - David Soanes Photography</title>
+  <meta name="description"
+    content="Photographer based in Barcelona and specialising in stock, product and travel photography. Please contact for enquiries." />
+  <script src="https://use.fontawesome.com/af14fb55aa.js"></script>
+  <script src="js/javascript.js"></script>
+  <link rel="icon" type="image/png" href="images/favicon.ico">
 
 </head>
 <header class="header">
@@ -26,12 +31,12 @@
     <span class="navicon"></span>
   </label>
   <div class="logo"><a href="index.html" class="logo"><img src="./images/logo.png" /></a></div>
-  <ul  class="menu">    
+  <ul class="menu">
     <li><a href="barcelona.html">Barcelona</a></li>
-    <li><a href="dublin.html">Dublin</a></li> 
+    <li><a href="dublin.html">Dublin</a></li>
     <li><a href="travel.html">Travel</a></li>
-    <li><a href="events.html">Events</a></li> 
-   <!-- <li><a href="reflections.html">Reflections</a></li> -->
+    <li><a href="events.html">Events</a></li>
+    <!-- <li><a href="reflections.html">Reflections</a></li> -->
     <li><a href="products.html">Products</a></li>
     <li><a href="architecture.html">Architecture</a></li>
     <li><a href="landscapes.html">Landscapes</a></li>
@@ -42,47 +47,44 @@
   </ul>
 </header>
 
-    </div>
+</div>
 
-    <hr>
+<hr>
 
-    <section id="about">
-      <h1>About</h1>
-      <p>Welcome to David Soanes Photography.</p>
-      <p>
-        I am based in Barcelona, Spain where currently I work on commission and shoot
-        stock photography for Getty Images and other stock photography agencies.
-      </p>
-      <p>I specialise in the following areas:</p>
+<section id="about">
+  <h1>About</h1>
+  <p>Welcome to David Soanes Photography.</p>
+  <p>
+    I am based in Ronda, Spain where currently I work on commission and shoot
+    stock photography for Getty Images and other stock photography agencies.
+  </p>
+  <p>I specialise in the following areas:</p>
 
-      <ul>
-        <li>Travel photography</li>
-      </ul>
-      <ul>
-        <li>Stock photography</li>
-      </ul>
-      <ul>
-        <li>Product Photography</li>
-      </ul>
-      <ul>
-        <li>Stock videos</li>
-      </ul>
-      <p>
-        I am also available for specific client requests, just contact me by
-        email
-        <a
-          href="https://web.archive.org/web/20170214165228/mailto: david.soanes@gmail.com"
-          ><b>here</b></a
-        >
-        for more information.
-      </p>
-     <!--<p>
+  <ul>
+    <li>Travel photography</li>
+  </ul>
+  <ul>
+    <li>Stock photography</li>
+  </ul>
+  <ul>
+    <li>Product Photography</li>
+  </ul>
+  <ul>
+    <li>Stock videos</li>
+  </ul>
+  <p>
+    I am also available for specific client requests, just contact me by
+    email
+    <a href="https://web.archive.org/web/20170214165228/mailto: david.soanes@gmail.com"><b>here</b></a>
+    for more information.
+  </p>
+  <!--<p>
         Previous Clients include: Open House Dublin, St. Patrick&#8217;s
         Festival, Fáilte Ireland, Dublin Dance Festival, Arthritis Ireland,
         Camara Education, An Taisce &#8211; The National Trust for Ireland,
         Brambles Café, Empire Donuts, Dubliner Magazine, The Gathering Ireland.
       </p>-->
-      <!--
+  <!--
       <div id="stock-links">
       <p>
         <a
@@ -109,32 +111,35 @@
                 <img class="" src="images/alamy.png" alt="Alamy" width="68" height="auto"/></a>
       </p>
     </div>-->
-    </section>
-    <hr>
-    <footer id="footer">
-      <div class="container">
-        <div class="copyright">
-          <p class="copyright-text">© David Soanes 2020</p>
+</section>
+<hr>
+<footer id="footer">
+  <div class="container">
+    <div class="copyright">
+      <p class="copyright-text">© David Soanes 2020</p>
 
-          <p class="social-desktop">
-            <a href="https://www.instagram.com/david.soanes/" target="_blank" i class="fa fa-instagram fa-2x" aria-hidden="true"></a>
-            <a href="https://500px.com/davidsoanes" target="_blank" i class="fa fa-500px fa-2x" aria-hidden="true"></a>
-            <a href="mailto:davidsoanes@gmail.com" target="_blank" i class="fa fa-envelope fa-2x" aria-hidden="true"></a>
-        </p>
+      <p class="social-desktop">
+        <a href="https://www.instagram.com/david.soanes/" target="_blank" i class="fa fa-instagram fa-2x"
+          aria-hidden="true"></a>
+        <a href="https://500px.com/davidsoanes" target="_blank" i class="fa fa-500px fa-2x" aria-hidden="true"></a>
+        <a href="mailto:davidsoanes@gmail.com" target="_blank" i class="fa fa-envelope fa-2x" aria-hidden="true"></a>
+      </p>
 
-        <p class="social-mobile">
-          <a href="https://www.instagram.com/david.soanes/" target="_blank" i class="fa fa-instagram fa-2x" aria-hidden="true"></a>
-          <a href="https://500px.com/davidsoanes" target="_blank" i class="fa fa-500px fa-2x" aria-hidden="true"></a>
-          <a href="mailto:davidsoanes@gmail.com" target="_blank" i class="fa fa-envelope fa-2x" aria-hidden="true"></a>
+      <p class="social-mobile">
+        <a href="https://www.instagram.com/david.soanes/" target="_blank" i class="fa fa-instagram fa-2x"
+          aria-hidden="true"></a>
+        <a href="https://500px.com/davidsoanes" target="_blank" i class="fa fa-500px fa-2x" aria-hidden="true"></a>
+        <a href="mailto:davidsoanes@gmail.com" target="_blank" i class="fa fa-envelope fa-2x" aria-hidden="true"></a>
       </p>
 
 
 
 
 
-</div>
-        </div>
-      </div>
-    </footer>
-  </body>
+    </div>
+  </div>
+  </div>
+</footer>
+</body>
+
 </html>
