--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
   <p>
     I am also available for specific client requests, just contact me by
     email
-    <a href="https://web.archive.org/web/20170214165228/mailto: david.soanes@gmail.com"><b>here</b></a>
+    <a href="mailto: david.soanes@gmail.com"><b>here</b></a>
     for more information.
   </p>
   <!--<p>
