--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
           <p class="social-desktop">
             <a href="https://www.instagram.com/david.soanes/" target="_blank" i class="fa fa-instagram fa-2x" aria-hidden="true"></a>
             <a href="https://500px.com/davidsoanes" target="_blank" i class="fa fa-500px fa-2x" aria-hidden="true"></a>
-            <a href="mailto:davidsoanes@gmail.com" target="_blank" i class="fa fa-envelope fa-2x" aria-hidden="true"></a>
+            <a href="mailto:david.soanes@gmail.com" target="_blank" i class="fa fa-envelope fa-2x" aria-hidden="true"></a>
         </p>
 
         <p class="social-mobile">
           <a href="https://www.instagram.com/david.soanes/" target="_blank" i class="fa fa-instagram fa-2x" aria-hidden="true"></a>
           <a href="https://500px.com/davidsoanes" target="_blank" i class="fa fa-500px fa-2x" aria-hidden="true"></a>
-          <a href="mailto:davidsoanes@gmail.com" target="_blank" i class="fa fa-envelope fa-2x" aria-hidden="true"></a>
+          <a href="mailto:david.soanes@gmail.com" target="_blank" i class="fa fa-envelope fa-2x" aria-hidden="true"></a>
       </p>
 
 
